--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^10.5.2",
     "mysql": "^2.18.1",
     "pg": "^8.11.3",
+    "pg-promise": "^11.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
