--- a/package.json
+++ b/package.json
@@ -7,15 +7,24 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "browserify-fs": "^1.0.0",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
     "express": "^4.18.2",
     "firebase": "^10.5.2",
     "mysql": "^2.18.1",
+    "path-browserify": "^1.0.1",
     "pg": "^8.11.3",
     "pg-promise": "^11.5.4",
+    "querystring-es3": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.1",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.22.2",
+    "react-scripts": "^5.0.1",
+    "stream-browserify": "^3.0.0",
+    "url": "^0.11.3",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
